# squadron-agents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_ITERATION_PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONCEPTS.md  DESIGN_DECISIONS.md  QUICKSTART_MULTIAGENT.md  README.md  SETUP_NEO4J.md
examples/: README.md  basic_agent.py  general_agent.py  llm_providers.py  mcp_tools.py  multi_agent_a2a.py  quick_multiagent.py  self_improvement.py  tool_packs.py
src/prometheus/reasoning/: lats.py
src/squadron/: __init__.py  cli.py
src/squadron/connectivity/: __init__.py  a2a.py  mcp_client.py  mcp_host.py
src/squadron/core/: __init__.py  agent.py  config.py  state.py
src/squadron/evolution/: __init__.py  archive.py  sandbox.py  sica.py
src/squadron/governance/: __init__.py  evaluator.py  guardrails.py
src/squadron/llm/: __init__.py  base.py  factory.py  providers.py
src/squadron/memory/: __init__.py  graphiti.py  types.py
src/squadron/reasoning/: __init__.py  lats.py  mcts.py  verifier.py
src/squadron/skills/: manager.py
src/squadron/tools/: __init__.py  coding.py  ops.py  research.py
tests/: conftest.py  test_basic_agent.py  test_completion_detection.py  test_connectivity.py  test_evolution.py  test_governance.py  test_lats_llm.py  test_llm_providers.py  test_mcts_integration.py  test_resume.py  test_skills.py  test_tools.py
